# python-embed-mongo

./: .gitignore  .travis.yml  README.md  main.py  mypy.ini  pyproject.toml  tox.ini  travis_install_pyenv.sh
embedmongo/: EmbedMongo.py  __init__.py  core.py  embedmongo.py  exceptions.py  log.py  main.py  package.py  system.py  utils.py
stubs/: tqdm.pyi
tests/: __init__.py  test_embedmongo.py  test_package.py  test_system.py  test_utils.py
tests/res/: mongo.tgz
tools/: cmds_help_output.py
