[tool.poetry]
name = "python-embed-mongo"
version = "0.1.0"
description = ""
authors = ["Karol Horowski <karol.hor@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "embedmongo" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
