[tool.poetry]
name = "python-embed-mongo"
version = "0.1.0"
description = ""
authors = ["Karol Horowski <karol.hor@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "embedmongo" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.20"
tqdm = "^4.28"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8-copyright = "^0.2.2"
flake8-colors = "^0.1.6"
flake8-import-order = "^0.18.0"
mypy = "^0.650.0"
requests-mock = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
